--- a/deep-learning-fundamentals/tensorflow_basics.ipynb
+++ b/deep-learning-fundamentals/tensorflow_basics.ipynb
@@ -271,10 +271,16 @@
    "source": [
     "### Weights and Bias in TensorFlow\n",
     "\n",
+    "The most common operation in neural networks is calculating the linear combination of inputs, weights, and biases. As a reminder, we can write the output of the linear operation as\n",
+    "\n",
+    "$$y = xW + b$$\n",
+    "\n",
+    "$W$ is a matrix of the weights connecting two layers. The output $y$, the input $x$ and the biases $b$ are all vectors.\n",
+    "\n",
     "* The goal of training a neural network is to modify weights and biases to best predict the labels. \n",
     "\n",
     "\n",
-    "> In order to use weights and bias, you'll need a Tensor that can be modified. This leaves out tf.placeholder() and tf.constant(), since those Tensors can't be modified. This is where <b style='color: red'>tf.Variable</b> class comes in."
+    "> In order to use weights and bias, you'll need a Tensor that can be modified. This leaves out `tf.placeholder()` and `tf.constant()`, since those Tensors can't be modified. This is where <b style='color: red'>tf.Variable</b> class comes in."
    ]
   },
   {
@@ -542,9 +548,15 @@
     "\n",
     "```python\n",
     "tf.subtract(tf.cast(tf.constant(2.0), tf.int32), tf.constant(1))   # 1\n",
-    "```\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "The code below is a simple algorithm using division and subtraction. Convert the following algorithm in regular Python to TensorFlow and print the results of the session. You can use tf.constant() for the values 10, 2, and 1."
+    "**Quiz** The code below is a simple algorithm using division and subtraction. Convert the following algorithm in regular Python to TensorFlow and print the results of the session. You can use tf.constant() for the values 10, 2, and 1."
    ]
   },
   {
