--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 131,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -15,7 +17,9 @@
   {
    "cell_type": "code",
    "execution_count": 144,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "class TreeNode:\n",
@@ -64,7 +68,9 @@
   {
    "cell_type": "code",
    "execution_count": 145,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import queue\n",
@@ -131,7 +137,9 @@
   {
    "cell_type": "code",
    "execution_count": 147,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def add_idx_to_tree(tree, current_idx):\n",
@@ -174,7 +182,9 @@
   {
    "cell_type": "code",
    "execution_count": 149,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def tree2list(tree, parent_idx, is_binary=False, is_left=False, is_right=False):\n",
@@ -244,7 +254,9 @@
   {
    "cell_type": "code",
    "execution_count": 151,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def save_data(data=None, data_file=None):\n",
@@ -447,7 +459,9 @@
   {
    "cell_type": "code",
    "execution_count": 156,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_comment(wordidx, idx2word:dict):\n",
@@ -463,7 +477,9 @@
   {
    "cell_type": "code",
    "execution_count": 157,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def get_comments_samples(samples:dict, idx2word:dict):\n",
@@ -610,7 +626,9 @@
   {
    "cell_type": "code",
    "execution_count": 124,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Now ready to build a classifier. \n",
@@ -771,7 +789,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -792,7 +812,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.4"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
