--- a/recurrent_neural_network/RNN_tensorflow_basic.ipynb
+++ b/recurrent_neural_network/RNN_tensorflow_basic.ipynb
@@ -14,7 +14,7 @@
     "## 0. Important hyperparameters for RNN\n",
     "\n",
     "* `batch_size`: The number of training examples to feed the network in one training pass. Typically this should be set as high as you can go without running out of memory.\n",
-    "* `num_steps`: Number of characters in the sequence the network is trained on. Larger is better typically; the network will learn more long range dependencies. But it takes longer to train. \n",
+    "* `num_steps`: (or time steps) Number of characters (or words) in sequences of a batch the network is trained on. Larger is better typically; the network will learn more long range dependencies. But it takes longer to train. \n",
     "* `lstm_units`: Number of units in the hidden layers in the LSTM cells. Usually larger is better performance wise. Common values are 128, 256, 512, etc.\n",
     "* `lstm_layers`: Number of LSTM layers in the network. I'd start with 1, then add more if I'm underfitting.\n",
     "* `learning_rate`: Learning rate\n",
@@ -49,12 +49,12 @@
     ")\n",
     "```\n",
     "\n",
-    "* `params`: A single tensor representing the complete embedding tensor, or a list of P tensors all of same shape except for the first dimension, representing sharded embedding tensors. Alternatively, a PartitionedVariable, created by partitioning along dimension 0. Each element must be appropriately sized for the given partition_strategy.\n",
-    "* `ids`: A Tensor with type int32 or int64 containing the ids to be looked up in params.\n",
+    "* `params`: Basically, it is <b>embedding lookup matrix</b>. More specifically, A single tensor representing the complete embedding tensor, or a list of P tensors all of same shape except for the first dimension, representing sharded embedding tensors. Alternatively, a PartitionedVariable, created by partitioning along dimension 0. Each element must be appropriately sized for the given partition_strategy.\n",
+    "* `ids`: A Tensor with type int32 or int64 containing the ids (or indexes) to be looked up in params.\n",
     "* `partition_strategy`: A string specifying the partitioning strategy, relevant if len(params) > 1. Currently \"div\" and \"mod\" are supported. Default is \"mod\".\n",
     "\n",
     "returns a dense tensor:\n",
-    "* with shape: shape(ids) + shape(params)[1:].\n",
+    "* with shape: `shape(ids) + shape(params)[1:]`.\n",
     "* with type: the same as the tensors in params."
    ]
   },
@@ -77,7 +77,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -122,6 +121,8 @@
     "* `output_keep_prob`: unit Tensor or float between 0 and 1, output keep probability; if it is constant and 1, no output dropout will be added.\n",
     "* and many other arguments\n",
     "\n",
+    "**Multiple layers of RNN network**\n",
+    "\n",
     "Most of the time, your network will have better performance with more layers. That's sort of the magic of deep learning, adding more layers allows the network to learn really complex relationships. Again, there is a simple way to create multiple layers of LSTM cells with [`tf.contrib.rnn.MultiRNNCell`](https://www.tensorflow.org/api_docs/python/tf/contrib/rnn/MultiRNNCell):\n",
     "\n",
     "```python\n",
@@ -131,30 +132,22 @@
     "      return drop  \n",
     "      \n",
     "cell = tf.contrib.rnn.MultiRNNCell([build_cell(num_units, keep_prob) for _ in range(num_layers)])\n",
-    "\n",
     "```\n",
     "\n",
     "The `build_cell()` function build a cell we described above. The `MultiRNNCell` wrapper builds this into multiple layers of RNN cells, one for each cell in the list.\n",
     "\n",
-    "So the final cell you're using in the network is actually multiple (or just one) cells with dropout. But it all works the same from an achitectural viewpoint, just a more complicated graph in the cell.\n",
+    "The final `MultiRNNCell` you're using in the network is actually multiple (or just one) cells with typically dropout. But it all works the same from an achitectural viewpoint, just a more complicated graph in the cell.\n",
     "\n",
-    "We also need to create an initial cell state of all zeros:\n",
-    "\n",
-    "```python\n",
-    "initial_state = cell.zero_state(batch_size, tf.float32)\n",
-    "```\n",
-    "\n",
-    "Here is [a tutorial on building RNNs](https://www.tensorflow.org/tutorials/recurrent) that will help you out."
+    "> NOTE: each RNN cell represents a layer. It is just that when we unroll a RNN cell in terms of time steps, it is like we have multiple RNN cells per layer. \n"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 3. RNN forward pass\n",
     "\n",
-    "We need to actually run the data through the RNN nodes. You can use [`tf.nn.dynamic_rnn`](https://www.tensorflow.org/api_docs/python/tf/nn/dynamic_rnn![image.png](attachment:image.png)) to do this. \n",
+    "We need to actually run the data through the RNN nodes. You can use [`tf.nn.dynamic_rnn`](https://www.tensorflow.org/api_docs/python/tf/nn/dynamic_rnn) to do this. \n",
     "\n",
     "You'd pass in the RNN `cell` you created (our multiple layered LSTM cell for instance), the `inputs` to the network and the `initial_state`:\n",
     "\n",
@@ -162,8 +155,7 @@
     "outputs, final_state = tf.nn.dynamic_rnn(cell, inputs, initial_state=initial_state)\n",
     "```\n",
     "\n",
-    "the `initial_state` is the cell state that is passed between the hidden layers in successive time steps. `tf.nn.dynamic_rnn` takes care of most of the work for us. We pass in our cell and the input to the cell. Then it does the unrolling and everything else for us. It returns `outputs` for each time step and the `final_state` of the hidden layer.\n",
-    "\n",
+    "the `initial_state` is the initial values of the cell state that is passed between the hidden layers in successive time steps. `tf.nn.dynamic_rnn` takes care of most of the work for us. We pass in our cell and the input to the cell. Then it does the unrolling and everything else for us.\n",
     "\n",
     "* `cell`: An instance of RNNCell.\n",
     "* `inputs`: The RNN inputs. \n",
@@ -174,25 +166,161 @@
     "\n",
     "* `initial_state`: (optional) An initial state for the RNN. If cell.state_size is an integer, this must be a Tensorof appropriate type and shape [batch_size, cell.state_size]. If cell.state_size is a tuple, this should be a tuple of tensors having shapes [batch_size, s] for s in cell.state_size.\n",
     "\n",
-    "Returns:\n",
+    "Create tensor for initial states with all zeros:\n",
     "\n",
-    "A pair (outputs, state) where:\n",
+    "```python\n",
+    "initial_state = cell.zero_state(batch_size, tf.float32)\n",
+    "```\n",
+    "\n",
+    "`tf.nn.dynamic_rnn` returns `outputs` for each time step and the <b style='color:red'>final</b> `state` of the hidden layer.\n",
+    "\n",
+    "> Note that, unlike outputs, the final `state` doesn't contain information about every time step, but only about the last one (that is, the state after the last one)\n",
+    "\n",
+    "A pair `(outputs, state)` where:\n",
     "\n",
     "* `outputs`: The RNN output Tensor.\n",
-    "    * If time_major == False (default), this will be a Tensor shaped: [batch_size, max_time, cell.output_size].\n",
-    "    * If time_major == True, this will be a Tensor shaped: [max_time, batch_size, cell.output_size].\n",
+    "    * If time_major == False (default), this will be a Tensor shaped: `[batch_size, max_time, cell.output_size]`.\n",
+    "    * If time_major == True, this will be a Tensor shaped: `[max_time, batch_size, cell.output_size]`.\n",
     "\n",
     "* `state`: The final state. If cell.state_size is an int, this will be shaped [batch_size, cell.state_size]. If it is a TensorShape, this will be shaped [batch_size] + cell.state_size. If it is a (possibly nested) tuple of ints or TensorShape, this will be a tuple having the corresponding shapes. If cells are LSTMCells state will be a tuple containing a LSTMStateTuple for each cell.\n",
     "\n",
-    "**Understand inputs and outputs**\n",
-    "* The inputs to the tf.nn.dynamic_rnn is of shape `[batch_size, max_time, embed_dim]`\n",
+    "**Typeical scenario for inputs and outputs**\n",
+    "* The inputs to the `tf.nn.dynamic_rnn` is of shape `[batch_size, max_time, embed_dim]`\n",
     "* The inputs to cell <b style='color:red'>at each time step</b> will have shape of `[batch_size, embed_dim]`\n",
-    "* The outputs from tf.nn.dynamic_rnn have shape of `[batch_size, max_time, cell.output_size]`\n",
-    "    * the cell.output_size typically is the `lstm_units` of the cell in the last layer of LSTM network. "
+    "* The outputs from `tf.nn.dynamic_rnn` have shape of `[batch_size, max_time, cell.output_size]`\n",
+    "    * the cell.output_size typically is the `lstm_units` of the cell in the last layer of LSTM network if the network has multiple LSTM layers. "
    ]
   },
   {
-   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**More investigation on tf.nn.dynamic_rnn** from [here](https://stats.stackexchange.com/questions/330176/what-is-the-output-of-a-tf-nn-dynamic-rnn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X batch shape: (4, 2, 3)\n",
+      "outputs with shape:  (4, 2, 5)\n",
+      "[[[ 0.93291515  0.50239432 -0.43230817  0.75407064 -0.0769805 ]\n",
+      "  [ 0.99999219  0.99999034 -0.99999845 -0.99962378 -0.9878065 ]]\n",
+      "\n",
+      " [[ 0.99956155  0.99439365 -0.99177754  0.11601707 -0.69421184]\n",
+      "  [ 0.          0.          0.          0.          0.        ]]\n",
+      "\n",
+      " [[ 0.99999726  0.99995226 -0.99991405 -0.63469619 -0.92676276]\n",
+      "  [ 0.99834806  0.99900055 -0.99992067 -0.98323303 -0.97121006]]\n",
+      "\n",
+      " [[-0.95585638  0.99917287 -0.99539107 -0.99984741 -0.99911404]\n",
+      "  [ 0.94049209  0.87342799 -0.97667748 -0.67169487 -0.92319804]]]\n",
+      "----------------------\n",
+      "states with shape:  (4, 5)\n",
+      "[[ 0.99999219  0.99999034 -0.99999845 -0.99962378 -0.9878065 ]\n",
+      " [ 0.99956155  0.99439365 -0.99177754  0.11601707 -0.69421184]\n",
+      " [ 0.99834806  0.99900055 -0.99992067 -0.98323303 -0.97121006]\n",
+      " [ 0.94049209  0.87342799 -0.97667748 -0.67169487 -0.92319804]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "\n",
+    "tf.reset_default_graph()\n",
+    "    \n",
+    "input_dim = 3\n",
+    "num_steps = 2\n",
+    "num_units = 5\n",
+    "\n",
+    "# None represents the batch size. \n",
+    "# We put None here, since the batch size can be different for each batch.\n",
+    "X = tf.placeholder(tf.float32, [None, num_steps, input_dim], 'inputs')\n",
+    "seq_length = tf.placeholder(tf.int32, [None], 'seq_length')\n",
+    "\n",
+    "# basic_cell = tf.contrib.rnn.BasicLSTMCell(num_units)\n",
+    "basic_cell = tf.contrib.rnn.BasicRNNCell(num_units)\n",
+    "\n",
+    "initial_state = basic_cell.zero_state(4, tf.float32)\n",
+    "\n",
+    "outputs, final_states = tf.nn.dynamic_rnn(basic_cell, X, sequence_length=seq_length, \n",
+    "                                          initial_state=initial_state, dtype=tf.float32)\n",
+    "\n",
+    "# Create a batch of training examples\n",
+    "# shape (4, 2, 3)\n",
+    "X_batch = np.array([\n",
+    "  # t = 0      t = 1\n",
+    "  [[0, 1, 2], [9, 8, 7]], # instance 0\n",
+    "  [[3, 4, 5], [5, 1, 9]], # instance 1\n",
+    "  [[6, 7, 8], [6, 5, 4]], # instance 2\n",
+    "  [[9, 0, 1], [3, 2, 1]], # instance 3 \n",
+    "])\n",
+    "\n",
+    "print('X batch shape:', X_batch.shape)\n",
+    "\n",
+    "seq_length_batch = np.array([2, 1, 2, 2])\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(tf.global_variables_initializer())\n",
+    "    outputs_val, states_val = sess.run([outputs, final_states],\n",
+    "                                      feed_dict={X:X_batch, seq_length:seq_length_batch})\n",
+    "    \n",
+    "    print('outputs with shape: ', outputs_val.shape) \n",
+    "    print(outputs_val)\n",
+    "    print('----------------------')\n",
+    "    print('states with shape: ', states_val.shape) \n",
+    "    print(states_val)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**From code above, we know that:**\n",
+    "* input X batch shape: (batch_size, num_steps, input_dim) => (4, 2, 3)\n",
+    "* outputs with shape:  (batch_size, num_steps, cell.output_size) => (4, 2, 5)\n",
+    "* states with shape:  (batch_size, cell.state_size) => (4, 5)\n",
+    "\n",
+    "**More specifically, we observe that tf.nn.dynamic_rnn returns:**\n",
+    "* `outputs` contains information about every time step. In this particular example:\n",
+    "    * 2 steps\n",
+    "    * a batch of four examples, each has 5 dimensions.\n",
+    "\n",
+    "* `state` contains the state from last time step\n",
+    "    * final state only involves one time step (i.e., the last one)\n",
+    "    * a batch of four states, each for an example. \n",
+    "\n",
+    "**Moreover:**\n",
+    "* `cell.state_size` is determined by num_units\n",
+    "* `cell.output_size` is determined by num_units of the last RNN cell (last layer)\n",
+    "    * In this particular example, there is only one cell (i.e., one layer), therefore cell.output_size == cell.state_size, which is 5.\n",
+    "\n",
+    "**sequence_length of tf.nn.dynamic_rnn**\n",
+    "\n",
+    "`sequence_length`: (optional) An int32/int64 vector sized [batch_size]. Used to copy-through state and zero-out outputs when past a batch element's sequence length. So it's more for correctness than performance.\n",
+    "\n",
+    "In the above code, we define:\n",
+    "```python\n",
+    "seq_length_batch = np.array([2, 1, 2, 2])\n",
+    "```\n",
+    "which means that the `tf.nn.dynamic_rnn` only handles:\n",
+    "* the first two time steps for the first example of the batch,  \n",
+    "* the first time step for the second example\n",
+    "* the first two time steps for the third example \n",
+    "* the first two time steps for the fourth example \n",
+    "\n",
+    "> Therefore, we can see that values for the second time step of the second example are zeros in the `outputs`. More importantly, since the first time step of the second example is the last time step that has been handled, the final state for the second example contains the state from the first time step rather than the second time step\n",
+    "\n",
+    "the state is a convenient tensor that holds the last actual RNN state, ignoring the zeros. The output tensor holds the outputs of all cells, so it doesn't ignore the zeros. That's the reason for returning both of them."
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -237,13 +365,12 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## 4. Optimizer for RNN\n",
     "\n",
-    "Normal RNNs have have issues gradients exploding and disappearing. LSTMs fix the disappearance problem, but the gradients can still grow without bound. To fix this, we can clip the gradients above some threshold. That is, if a gradient is larger than that threshold, we set it to the threshold. This will ensure the gradients never grow overly large. Then we use an AdamOptimizer for the learning step.\n",
+    "Normal RNNs have have issues gradients exploding and vanishing. LSTMs fix the gradients vanishing problem, but the gradients can still grow without bound. To fix this, we can clip the gradients above some threshold. That is, if a gradient is larger than that threshold, we set it to the threshold. This will ensure the gradients never grow overly large. Then we use an AdamOptimizer for the learning step.\n",
     "\n",
     "```python\n",
     "def build_optimizer(loss, learning_rate, grad_clip):\n",
@@ -280,6 +407,13 @@
     "correct_pred = tf.equal(tf.cast(tf.round(predictions), tf.int32), labels_) \n",
     "accuracy = tf.reduce_mean(tf.cast(correct_pred, tf.float32))\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is [a tutorial on building RNNs](https://www.tensorflow.org/tutorials/recurrent) that will help you out."
    ]
   },
   {
