Add new ipynb files

--- a/deep-learning-fundamentals/mini_batching.ipynb
+++ b/deep-learning-fundamentals/mini_batching.ipynb
@@ -96,7 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Mini-batching in Code\n",
+    "## Mini-batching in TensorFlow\n",
     "\n",
     "In order to use mini-batching, you must first divide your data into batches.\n",
     "\n",
