--- a/deep-learning-fundamentals/tensorflow_dropout.ipynb
+++ b/deep-learning-fundamentals/tensorflow_dropout.ipynb
@@ -96,6 +96,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<img src=\"images/tf_dropout_quiz1.png\" alt=\"Drawing\" style=\"width:90%;height:90%\"/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Quiz 2**\n",
     "\n",
     "Build a model with a ReLU layer and dropout layer using the keep_prob placeholder to pass in a probability of 0.5. Print the logits from the model.\n",
