--- a/deep-learning-fundamentals/tensorflow_multilayer_neural_network.ipynb
+++ b/deep-learning-fundamentals/tensorflow_multilayer_neural_network.ipynb
@@ -19,6 +19,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Step by Step\n",
+    "In the following walkthrough, we'll step through TensorFlow code written to classify the letters in the MNIST database. If you would like to run the network on your computer, the file is provided [here](https://d17h27t6h515a5.cloudfront.net/topher/2017/February/58a61a3a_multilayer-perceptron/multilayer-perceptron.zip). You can find this and many more examples of TensorFlow at [Aymeric Damien's GitHub repository](https://github.com/aymericdamien/TensorFlow-Examples)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -43,6 +51,8 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
+    "# You'll use the MNIST dataset provided by TensorFlow, which batches \n",
+    "# and One-Hot encodes the data for you.\n",
     "mnist = input_data.read_data_sets(\"/tmp/tensorflow/mnist/input_data\", one_hot=True, reshape=False)\n",
     "\n",
     "# The features are already scaled and the data is shuffled\n",
@@ -85,6 +95,8 @@
     "x = tf.placeholder(\"float\", [None, 28, 28, 1])\n",
     "y = tf.placeholder(\"float\", [None, n_classes])\n",
     "print(x)\n",
+    "\n",
+    "# Note here\n",
     "x_flat = tf.reshape(x, [-1, n_input])\n",
     "print(x_flat)"
    ]
