Reorganize repository structure

--- a/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
+++ b/natural_language_process/sentiment_analysis/sentiment_analysis_recursive_neural_network/stanford_recursive_network_sentiment_analysis_data_preparation.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -406,7 +404,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_data(data_file=None):\n",
+    "    if data_file == None:\n",
+    "        return\n",
+    "    with open(data_file) as f:\n",
+    "        data = json.load(f)\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "folder = './data/large_files/stanford_sentiment/parsed_data/'\n",
+    "word2idx = load_data(folder + \"sentiment_word2idx.json\")\n",
+    "sentiment_binary_train = load_data(folder + \"sentiment_binary_train.json\")\n",
+    "sentiment_train = load_data(folder + \"sentiment_train.json\")\n",
+    "sentiment_binary_test = load_data(folder + \"sentiment_binary_test.json\")\n",
+    "sentiment_test = load_data(folder + \"sentiment_test.json\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -420,48 +467,27 @@
     }
    ],
    "source": [
-    "def get_binary_sample(samples:dict):\n",
+    "# the loaded samples has three type of labels -1,0,1, in which -1 indicates neutral sentiment.\n",
+    "# We exclude samples with neutral sentiment.\n",
+    "def exclude_neutral_sample(samples:dict):\n",
     "    ssamples = {}\n",
     "    for k, v in samples.items():\n",
     "        if v[3][-1] != -1:\n",
     "            ssamples[k] = v\n",
     "    return ssamples\n",
     "        \n",
-    "train_b = get_binary_sample(train_b)\n",
-    "test_b = get_binary_sample(test_b)\n",
+    "train_b = exclude_neutral_sample(sentiment_binary_train)\n",
+    "test_b = exclude_neutral_sample(sentiment_binary_test)\n",
     "\n",
     "print(\"After filtering: # of training samples and # of test samples\")\n",
-    "print(len(train_b))\n",
-    "print(len(test_b))"
+    "print(\"# of traing samples: \", len(train_b))\n",
+    "print(\"# of test samples: \", len(test_b))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "how  are you \n"
-     ]
-    }
-   ],
-   "source": [
-    "def remove_punctuation(s):\n",
-    "    return s.translate(str.maketrans('','',string.punctuation))\n",
-    "\n",
-    "sentence = \"how ! are you --\"\n",
-    "print(remove_punctuation(sentence))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 156,
-   "metadata": {
-    "collapsed": true
-   },
    "outputs": [],
    "source": [
     "def get_comment(wordidx, idx2word:dict):\n",
@@ -476,10 +502,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_comments_samples(samples:dict, idx2word:dict):\n",
@@ -496,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +535,13 @@
    ],
    "source": [
     "idx2word = {v:k for k, v in word2idx.items()}\n",
-    "train_comments, train_targets = get_comments_samples(train_b, idx2word)\n",
-    "test_comments, test_targets = get_comments_samples(test_b, idx2word)\n",
+    "train_comments_0, train_targets = get_comments_samples(train_b, idx2word)\n",
+    "test_comments_0, test_targets = get_comments_samples(test_b, idx2word)\n",
     "\n",
     "count0 = 0\n",
     "count1 = 0\n",
     "count2 = 0\n",
-    "for i in range(len(train_comments)):\n",
+    "for i in range(len(train_comments_0)):\n",
     "\n",
     "    if train_targets[i] == 0:\n",
     "        count0 += 1\n",
@@ -534,72 +558,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~\n",
-      "['in', 'this', 'case', 'zero']\n"
+      "vocabulary_size 18647\n"
      ]
     }
    ],
    "source": [
-    "import nltk\n",
-    "\n",
-    "print(string.punctuation)\n",
-    "print(nltk.word_tokenize(comment))"
+    "vocabulary_size = len(idx2word)\n",
+    "print('vocabulary_size' , vocabulary_size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "inconsistent shapes",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-161-65f8a7440e59>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfeature_extraction\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtext\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mCountVectorizer\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mall_comments\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtrain_comments\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtest_comments\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"total # of comments:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mall_comments\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.4/lib/python3.4/site-packages/scipy/sparse/compressed.py\u001b[0m in \u001b[0;36m__add__\u001b[0;34m(self, other)\u001b[0m\n\u001b[1;32m    338\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0misspmatrix\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 340\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"inconsistent shapes\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    341\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    342\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_binopt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mother\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'_plus_'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: inconsistent shapes"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# of train comments: 6920\n",
+      "# of test comments: 1821\n",
+      "total # of comments: 8741\n"
      ]
     }
    ],
    "source": [
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "\n",
-    "all_comments = train_comments + test_comments\n",
+    "all_comments = train_comments_0 + test_comments_0\n",
     "\n",
+    "print('# of train comments:', len(train_comments_0))\n",
+    "print('# of test comments:', len(test_comments_0))\n",
     "print(\"total # of comments:\", len(all_comments))\n",
     "# Initialize a CoutVectorizer to use NLTK's tokenizer instead of its \n",
     "# default one (which ignores punctuation and stopwords). \n",
     "# Minimum document frequency set to 1. \n",
-    "foovec = CountVectorizer()\n",
+    "foovec = CountVectorizer(max_features=6000)\n",
     "# sents turned into sparse vector of word frequency counts\n",
-    "foovec = foovec.fit(all_comments)\n",
+    "# foovec = foovec.fit(all_comments)\n",
+    "foovec = foovec.fit(train_comments_0)\n",
+    "train_comments = foovec.transform(train_comments_0)\n",
+    "# test_comments = foovec.fit_transform(test_comments_0)\n",
     "\n",
-    "train_comments = foovec.transform(train_comments)\n",
-    "test_comments = foovec.transform(test_comments)\n",
+    "test_comments = foovec.transform(test_comments_0)\n",
     "\n",
     "# foovec now contains vocab dictionary which maps unique words to indexes\n",
-    "print(foovec.vocabulary_)\n",
+    "# print(foovec.vocabulary_)\n",
     "# print(foovec.stop_words_ )\n",
     "# sents_counts has a dimension of 3 (document count) by 19 (# of unique words)\n",
-    "print(sents_counts.shape)\n",
-    "\n",
-    "# print(\"Start Saving Data\")\n",
-    "# print(\"Data Saving Finished\")"
+    "# print(sents_counts.shape)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6920, 6000)\n",
+      "(1821, 6000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_comments.shape)\n",
+    "print(test_comments.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +654,8 @@
     "\n",
     "tfidf_transformer = TfidfTransformer()\n",
     "X_train = tfidf_transformer.fit_transform(train_comments)\n",
-    "X_test = tfidf_transformer.fit_transform(test_comments)\n",
+    "# X_test = tfidf_transformer.fit_transform(test_comments)\n",
+    "X_test = tfidf_transformer.transform(test_comments)\n",
     "# print(sents_tfidf.toarray()[0, 200:600])\n",
     "\n",
     "print(X_train.shape[0])\n",
@@ -625,10 +664,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6920, 6000)\n",
+      "(1821, 6000)\n",
+      "(6920, 6000)\n",
+      "(1821, 6000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(train_comments.shape)\n",
+    "print(test_comments.shape)\n",
+    "print(X_train.shape)\n",
+    "print(X_test.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Now ready to build a classifier. \n",
@@ -641,16 +701,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "0.81274025260845684"
+       "0.81164195496979685"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,23 +725,29 @@
    "source": [
     "# Predicting the Test set results, find accuracy\n",
     "from sklearn.metrics  import accuracy_score\n",
+    "\n",
+    "print()\n",
     "y_pred = clf.predict(X_test)\n",
+    "# print(y_pred.shape)\n",
+    "# print(test_targets.shape)\n",
+    "\n",
+    "\n",
     "accuracy_score(test_targets, y_pred)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[679, 233],\n",
-       "       [108, 801]])"
+       "array([[699, 213],\n",
+       "       [130, 779]])"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,16 +761,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.81219110378912684"
+       "0.80889621087314667"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -711,17 +784,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[727, 185],\n",
-       "       [157, 752]])"
+       "array([[726, 186],\n",
+       "       [162, 747]])"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -789,11 +862,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def remove_punctuation(s):\n",
+    "    return s.translate(str.maketrans('','',string.punctuation))\n",
+    "\n",
+    "sentence = \"how ! are you --\"\n",
+    "print(remove_punctuation(sentence))"
+   ]
   }
  ],
  "metadata": {
