--- a/natural_language_process/embeddings/word_embeddings_foundation.ipynb
+++ b/natural_language_process/embeddings/word_embeddings_foundation.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "**Step 2**\n",
     "* Let's say we used PCA on a term-document matrix\n",
-    "```\n",
+    "```python\n",
     "model = PCA()\n",
     "Z = model.fit_transform(X)\n",
     "# X is VxN matrix, Z is VxD matrix, where D<<N\n",
@@ -147,7 +147,7 @@
     "     \n",
     "         Input vector (1xV) -> W_e -> word vector (1xD) -> recurrent unit -> softmax(1xK)\n",
     "    \n",
-    "    * Assuming each word in a sequence is represented as a one-hot vector of length V. Thus, a sequence of length T is a list of one-hot vectors with shape (T, V)\n",
+    "    * Assuming each word in a sequence is represented as a <b>one-hot vector</b> of length V. Thus, a sequence of length T is a list of one-hot vectors with shape (T, V)\n",
     "    * $ W_e $ of shape $(V, D)$ is the word embedding transformation matrix that is used to transform one-hot vector of size V into word vector/embedding of size D\n",
     "    * Since $ word(t) $ is a one-hot vector that has 1 in the $ ith $ position and all other positions have value of 0, $ x(t) =  word(t) \\times W_e $ = $ ith $ row of $ W_e $\n",
     "\n",
@@ -207,10 +207,29 @@
     "  g & h & i \\\\\n",
     "  p & q & r \\\\\n",
     " \\end{bmatrix} \n",
-    " $$</b>\n",
+    " $$</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** TensorFlow and Keras provide high level API for embedding layer: [here for TensorFlow](https://www.tensorflow.org/api_docs/python/tf/nn/embedding_lookup) and [here for Keras](https://keras.io/layers/embeddings/) **\n",
     "\n",
+    "* When defining an `embedding` layer, we need to specify an embedding matrix with shape `(vocabulary size, dimension of word vectors)`\n",
+    "* The `embedding` layer takes a tensor of shape `(batch size, max input length)` as input. This corresponds to sentences converted into lists of indices (integers), as shown in the figure below.\n",
+    "    * The `batch size` is the number of training examples in each min-batch\n",
+    "    * The `max input length` is the max number of words among all training examples in the min-batch\n",
     "\n",
-    "* Keras provides high level API to perform [word embedding](https://keras.io/layers/embeddings/)"
+    "<img src=\"images/embedding1.png\" style=\"width:700px;height:250px;\">\n",
+    "\n",
+    "<caption><center> **Figure 4**: Embedding layer. This example shows the propagation of two examples through the embedding layer. Both have been zero-padded to a length of `max_len=5`. The final dimension of the representation is  `(2,max_len,50)` because the word embeddings we are using are 50 dimensional. </center></caption>\n",
+    "\n",
+    "* The embedding layer contains a embedding matrix with shape `(vocabulary size, dimension of word vectors)`\n",
+    "* The largest integer (i.e. word index) in the input should be no larger than the vocabulary size. \n",
+    "* The layer outputs a tenso of shape `(batch size, max input length, dimension of word vectors)`.\n",
+    "\n",
+    "The first step is to convert all your training sentences into lists of indices, and then zero-pad all these lists so that their length is the length of the longest sentence. "
    ]
   },
   {
@@ -253,7 +272,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Continguous Bag of Words (CBOW)\n",
+    "## Continguous Bag of Words (CBOW)\n",
     "\n",
     "* Incorporate context\n",
     "* Can better predict a word given a window of surrounding words (rather then just previous word)\n",
@@ -273,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Skip-Gram\n",
+    "## Skip-Gram\n",
     "* CBOW and skip-gram are the two main methods of incorporating context with word2vec\n",
     "* Skip-gram is the opposite of CBOW\n",
     "* CBOW uses context to predict middle word\n",
@@ -531,7 +550,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.4.4"
   }
  },
  "nbformat": 4,
